--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="textColor">#FF000000</color>
     <color name="textColorSplash">#FFFFFFFF</color>
+    <color name="status_bar_color">#FAFAFAFA</color>
 </resources>
